--- a/src/ui/components/menu.css
+++ b/src/ui/components/menu.css
@@ -3,11 +3,11 @@
     max-width: 260px; /* opcional: limita largura máxima */
     height: 100vh;
     min-height: 100vh;
-    background-color: #f0f0f0;
     border-radius: 1.4vw;
     align-items: center;
     display: flex;
     flex-direction: column;
+    background: var(--fundo-destaque);
 }
 
 .menu-btn {
@@ -19,7 +19,7 @@
     padding: 0.7vw;
     border-radius: 1.4vw;
     font-size: 1.25vw;
-    color: #0A4489;
+    color: var(--azul-escuro);
     cursor: pointer;
     transition: background 0.2s;
     font-family: inherit;
@@ -32,22 +32,22 @@
 }
 
 .menu-btn.active {
-    background: #0A4489;
-    color: #fff;
+    background: var(--azul-escuro);
+    color: var(--fundo);
 }
 
 .menu-btn.active svg {
-    color: #fff;
+    color: var(--fundo);
 }
 
 .menu-btn:hover:not(.active) {
-    background: #e6f0ff;
+    background: var(--cinza);
 }
 
 .submenu {
     width: 90%;
     margin: 0 auto 0.7vw auto;
-    background: #fff;
+    background: var(--fundo);
     border-radius: 1vw;
     box-shadow: 0 2px 8px rgba(0,0,0,0.04);
     display: flex;
@@ -62,12 +62,11 @@
     justify-content: space-between;
     background: none;
     border: none;
-    color: #0A4489;
+    color: var(--azul-escuro);
     font-size: 1.05vw;
     padding: 0.5vw 0.5vw 0.5vw 0;
     border-radius: 0.7vw;
     cursor: pointer;
-    transition: background 0.2s, color 0.2s;
     width: 100%;
     margin-left: 0.2vw;
     gap: 0.5vw;
@@ -75,6 +74,6 @@
 
 .submenu-btn.active,
 .submenu-btn:hover {
-    background: #e6f0ff;
-    color: #0A4489;
+    background: var(--cinza);
+    color: var(--azul-escuro);
 }
